Fix status badge not visible

--- a/src/ui/atoms/badge/NotificationBadge.css
+++ b/src/ui/atoms/badge/NotificationBadge.css
@@ -3,7 +3,7 @@
   height: 10px;
   border-radius: 10px;
 
-  display: flex;
+  display: inline-flex;
   justify-content: center;
   align-items: center;
 }
